Fix footer stuck to bottom of page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,23 @@
 }
 
 body {
-    min-height: 100vh;
+    height: 100vh;
+    width: 100%;
+}
+
+.article {
+    min-height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+}
+
+main {
+    flex-grow: 1;
+}
+
+header, main, footer {
+    flex-shrink: 0;
 }
 
 .hidden {
